tests/fail/expr/group.rs.no
fn main() {
    one_assert::assert!(<group>); // how do you create an invisible group??
}
